--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       branches: [ master, 3.2, 3.1, 3.0 ]
 jobs:
   windows-editor:
-    runs-on: windows-2019
+    runs-on: windows-latest
     name: Windows Editor
     env:
       SCONS_CACHE: ~/.scons_cache/
@@ -19,7 +19,11 @@ jobs:
         key: ${{ runner.os }}-release_debug
     - name: Installation scons
       run: |
-        python -m pip install scons pywin32
+        python3 -m pip install scons pywin32
+    - name: Check versioning
+      run: |
+        python3 --version
+        scons --version
     - name: Compilation
       run: |
         scons -j2 warnings=all werror=yes platform=windows target=release_debug
@@ -29,7 +33,7 @@ jobs:
         name: windows-editor
         path: bin/godot.windows.opt.tools.64.exe
   windows-release:
-    runs-on: windows-2019
+    runs-on: windows-latest
     name: Windows Release
     env:
      SCONS_CACHE: ~/.scons_cache/ 
@@ -42,7 +46,11 @@ jobs:
         key: ${{ runner.os }}-release_debug
     - name: Installation scons
       run: |
-        python -m pip install scons pywin32
+        python3 -m pip install scons pywin32
+    - name: Check versioning
+      run: |
+        python3 --version
+        scons --version
     - name: Compilation
       run: |
         scons -j2 platform=windows tools=no warnings=all werror=yes target=release
