fix python version and check scons versions and python version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,22 @@ jobs:
       with:
         path: ~/.scons_cache
         key: ${{ runner.os }}-release_debug
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        # Semantic version range syntax or exact version of a Python version
+        python-version: '3.x' 
+        # Optional - x64 or x86 architecture, defaults to x64
+        architecture: 'x64' 
+    # You can test your matrix by printing the current Python version
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
     - name: Installation scons
       run: |
-        python3 -m pip install scons pywin32
+        python -m pip install scons pywin32
     - name: Check versioning
       run: |
-        python3 --version
+        python --version
         scons --version
     - name: Compilation
       run: |
@@ -44,6 +54,16 @@ jobs:
       with:
         path: ~/.scons_cache
         key: ${{ runner.os }}-release_debug
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        # Semantic version range syntax or exact version of a Python version
+        python-version: '3.x' 
+        # Optional - x64 or x86 architecture, defaults to x64
+        architecture: 'x64' 
+    # You can test your matrix by printing the current Python version
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
     - name: Installation scons
       run: |
         python3 -m pip install scons pywin32
