--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,10 +66,10 @@ jobs:
       run: python -c "import sys; print(sys.version)"
     - name: Installation scons
       run: |
-        python3 -m pip install scons pywin32
+        python -m pip install scons pywin32
     - name: Check versioning
       run: |
-        python3 --version
+        python --version
         scons --version
     - name: Compilation
       run: |
@@ -79,4 +79,3 @@ jobs:
       with:
         name: windows-player
         path: bin/godot.windows.opt.64.exe 
-
