--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,20 +4,20 @@ on:
     pull_request:
     push:
       branches: [ master, 3.2, 3.1, 3.0 ]
+env:
+    SCONS_CACHE: ~/.scons_cache/
+    SCONS_CACHE_LIMIT: 2048
 jobs:
   windows-editor:
     runs-on: windows-latest
     name: Windows Editor
-    env:
-      SCONS_CACHE: ~/.scons_cache/
-      SCONS_CACHE_LIMIT: 2048  
     steps:
     - uses: actions/checkout@v2
     - name: configure .scons_cache and download cache
       id: scons-cache
       uses: actions/cache@v2
       with:
-        path: ~/.scons_cache/**
+        path: ~/.scons_cache/
         key: ${{ runner.os }}-release_debug
         restore-keys: ${{ runner.os }}-release_debug
     - name: Set up Python 3.x
@@ -48,9 +48,6 @@ jobs:
   windows-release:
     runs-on: windows-latest
     name: Windows Release
-    env:
-     SCONS_CACHE: ~/.scons_cache/ 
-     SCONS_CACHE_LIMIT: 2048
     steps:
     - uses: actions/checkout@v2
     - name: configure .scons_cache and download cache
