--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,34 @@ env:
   SCONS_CACHE_MSVC_CONFIG: true
   SCONS_CACHE_LIMIT: 8192
 jobs:
+  static-checks:
+    name: Static Checks (clang-format, black format, file format, documentation checks)
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -qq dos2unix recode clang-format
+          sudo pip3 install black pygments
+
+      - name: File formatting checks (file_format.sh)
+        run: |
+          bash ./misc/scripts/file_format.sh
+
+      - name: Style checks via clang-format (clang_format.sh)
+        run: |
+          bash ./misc/scripts/clang_format.sh
+
+      - name: Python style checks via black (black_format.sh)
+        run: |
+          bash ./misc/scripts/black_format.sh
+
+      - name: Documentation checks
+        run: |
+          doc/tools/makerst.py --dry-run doc/classes modules
   windows-editor:
     # Windows 10 with latest image
     runs-on: "windows-latest"
@@ -124,3 +152,197 @@ jobs:
 #      with:
 #        name: windows-template (x64)
 #        path: bin/godot.windows.opt.64.exe
+
+  macos-editor:
+    # Windows 10 with latest image
+    runs-on: "macos-latest"
+
+    # Windows Editor - checkout with the plugin
+    name: MacOS Editor (target=release_debug, tools=yes)
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # Upload cache on completion and check it out now
+      # Editing this is pretty dangerous for windows since it can break and needs properly tested with a fresh cache.
+      # Linux with this will work reliably, so not as bad to edit for Linux.
+      - name: Load .scons_cache directory
+        id: macos-editor-cache
+        uses: RevoluPowered/cache@v2.1
+        with:
+          path: ~/.scons_cache/
+          key: ${{runner.os}}-editor-${{github.sha}}
+          restore-keys: |
+            ${{runner.os}}-editor-${{github.sha}}
+            ${{runner.os}}-editor
+            ${{runner.os}}
+
+      # Use python 3.x release (works cross platform; best to keep self contained in it's own step)
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+
+      # Setup scons, print python version and scons version info, so if anything is broken it won't run the build.
+      - name: Configuring Python packages
+        run: |
+          python -c "import sys; print(sys.version)"
+          python -m pip install scons
+          python --version
+          scons --version
+
+      # We should always be explicit with our flags usage here since it's gonna be sure to always set those flags
+      - name: Compilation
+        env:
+          SCONS_CACHE: ~/.scons_cache/
+        run: |
+          scons -j2 verbose=yes warnings=all werror=yes platform=osx tools=yes target=release_debug
+
+  macos-template:
+    runs-on: "macos-latest"
+    name: MacOS Template (target=release, tools=no)
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # Upload cache on completion and check it out now
+      # Editing this is pretty dangerous for windows since it can break and needs properly tested with a fresh cache.
+      # Linux with this will work reliably, so not as bad to edit for Linux.
+      - name: Load .scons_cache directory
+        id: macos-template-cache
+        uses: RevoluPowered/cache@v2.1
+        with:
+          path: ~/.scons_cache/
+          key: ${{runner.os}}-template-${{github.sha}}
+          restore-keys: |
+            ${{runner.os}}-template-${{github.sha}}
+            ${{runner.os}}-template
+            ${{runner.os}}
+
+        # Use python 3.x release (works cross platform)
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+
+      # You can test your matrix by printing the current Python version
+      - name: Configuring Python packages
+        run: |
+          python -c "import sys; print(sys.version)"
+          python -m pip install scons
+          python --version
+          scons --version
+      - name: Compilation
+        env:
+          SCONS_CACHE: ~/.scons_cache/
+        run: |
+          scons -j2 verbose=yes warnings=all werror=yes platform=osx target=release tools=no
+
+  linux-editor:
+    # Windows 10 with latest image
+    runs-on: "ubuntu-20.04"
+
+    # Windows Editor - checkout with the plugin
+    name: Linux Editor (target=release_debug, tools=yes)
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # install all packages (except scons)
+      - name: Configure dependencies
+        run: |
+          sudo apt-get install build-essential pkg-config libx11-dev libxcursor-dev \
+          libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm
+
+      # Upload cache on completion and check it out now
+      # Editing this is pretty dangerous for windows since it can break and needs properly tested with a fresh cache.
+      # Linux with this will work reliably, so not as bad to edit for Linux.
+      - name: Load .scons_cache directory
+        id: linux-editor-cache
+        uses: RevoluPowered/cache@v2.1
+        with:
+          path: ~/.scons_cache/
+          key: ${{runner.os}}-editor-${{github.sha}}
+          restore-keys: |
+            ${{runner.os}}-editor-${{github.sha}}
+            ${{runner.os}}-editor
+            ${{runner.os}}
+
+      # Use python 3.x release (works cross platform; best to keep self contained in it's own step)
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+
+      # Setup scons, print python version and scons version info, so if anything is broken it won't run the build.
+      - name: Configuring Python packages
+        run: |
+          python -c "import sys; print(sys.version)"
+          python -m pip install scons
+          python --version
+          scons --version
+
+      # We should always be explicit with our flags usage here since it's gonna be sure to always set those flags
+      - name: Compilation
+        env:
+          SCONS_CACHE: ~/.scons_cache/
+        run: |
+          scons -j2 verbose=yes warnings=all werror=yes platform=linuxbsd tools=yes target=release_debug
+
+  linux-template:
+    runs-on: "ubuntu-20.04"
+    name: Linux Template (target=release, tools=no)
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # install all packages (except scons)
+      - name: Configure dependencies
+        run: |
+          sudo apt-get install build-essential pkg-config libx11-dev libxcursor-dev \
+          libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm
+
+      # Upload cache on completion and check it out now
+      # Editing this is pretty dangerous for windows since it can break and needs properly tested with a fresh cache.
+      # Linux with this will work reliably, so not as bad to edit for Linux.
+      - name: Load .scons_cache directory
+        id: linux-template-cache
+        uses: RevoluPowered/cache@v2.1
+        with:
+          path: ~/.scons_cache/
+          key: ${{runner.os}}-template-${{github.sha}}
+          restore-keys: |
+            ${{runner.os}}-template-${{github.sha}}
+            ${{runner.os}}-template
+            ${{runner.os}}
+
+        # Use python 3.x release (works cross platform)
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+
+      # You can test your matrix by printing the current Python version
+      - name: Configuring Python packages
+        run: |
+          python -c "import sys; print(sys.version)"
+          python -m pip install scons
+          python --version
+          scons --version
+      - name: Compilation
+        env:
+          SCONS_CACHE: ~/.scons_cache/
+        run: |
+          scons -j2 verbose=yes warnings=all werror=yes platform=linuxbsd target=release tools=no
